--- a/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
+++ b/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
@@ -1,3 +1,4 @@
+
 #section-one {
   background-color: #000000;
   position: relative;
@@ -263,8 +264,67 @@
   margin: 0;
 }
 
-/* mobile styles */
+/* smaller desktop */
+@media (min-width: 992px) and (max-width: 1800px) {
 
+  div#nav-container3 > .menu-links-3:nth-of-type(1) {
+    margin-left: 60px;
+}
+
+#gift-card-header1 {
+  font-size: 16px;
+}
+
+#gift-card-header2 {
+  font-size: 49px;
+}
+
+#card-container {
+  flex-wrap: nowrap;
+}
+
+  .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiCard-root.card {
+    min-width: 200px;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
+  
+  #todo-container, #todo-inner-container {
+    max-width: 100%;
+    width: fit-content;
+  }
+
+  #todo-home-header{
+    font-size: 34px;
+  }
+
+  #todo-trip-header {
+    font-size: 34px;
+    float: right;
+    transform: translate(30%, 10%);
+  }
+
+  .things-to-do-img {
+    width: fit-content;
+    min-width: 400px;
+    margin: 1%;
+  }
+
+  #hosting-img-container, #hosting-img-inner-container {
+    max-width: 100%;
+    width: fit-content;
+  }  
+  
+  #hosting-header {
+    font-size: 43px;
+  }
+
+  #host-btn {
+    margin-top: 10px;
+  }
+}
+
+/* mobile styles */
 @media (max-width: 480px) {
   #content {
     background-image: linear-gradient(#000000 23.5%, #ffffff 23.5%);
@@ -293,17 +353,18 @@
 
   #gift-card-header1 {
     font-size: 16px;
-    margin-left: 35%;
+    margin-left: 50%;
     bottom: 180px;
-    top: unset;
+    top: 50%;
+    transform: translate(-50%, -25%);
   }                                                                            
 
   #gift-card-header2 {
     font-size: 43px;
-    top: unset;
-    bottom: 0px;
-    margin-left: 25%;
-    font-weight: 500;                         
+    top: 58%;
+    margin-left: 50%;
+    font-weight: 500;     
+    transform: translate(-50%, -25%);                    
   }
  
   #gift-card-img {
