--- a/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
+++ b/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
@@ -42,6 +42,12 @@
   justify-content: center;
 }
 
+#tent-img {
+  max-width: 100%;
+  border-radius: 15px;
+  max-height: 800px;
+}
+
 #main-header {
   position: absolute;
   color: #ffffff;
@@ -89,14 +95,15 @@
 #gift-card-header1 {
   position: absolute;
   top: 20%;
-  margin-left: 18%;
+  margin-left: 28%;
   font-weight: 500;
+  transform: translate(-10%, 80%);
 }
 
 #gift-card-header2 {
   position: absolute;
   top: 18%;
-  margin-left: 10%;
+  margin-left: 20%;
   white-space: pre-line;
   font-size: 95px;
 }
@@ -273,10 +280,12 @@
 
 #gift-card-header1 {
   font-size: 16px;
+  transform: translate(-10%, 80%);
 }
 
 #gift-card-header2 {
   font-size: 49px;
+  transform: translate(0, 10%);
 }
 
 #card-container {
