--- a/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
+++ b/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
@@ -97,7 +97,7 @@
   top: 20%;
   margin-left: 28%;
   font-weight: 500;
-  transform: translate(-10%, 80%);
+  transform: translate(20%, 80%);
 }
 
 #gift-card-header2 {
@@ -203,15 +203,11 @@
   margin: 2%;
 }
 
-#hosting-img-container {
+#hosting-img-container, #hosting-img-inner-container {
   position: relative;
-  width: 1600px;
+  max-width: 100%;
+  width: fit-content;
   margin: 0 auto;
-}
-
-#hosting-img-inner-container {
-  position: relative;
-  width: 1600px;
 }
 
 #hosting-img {
@@ -219,6 +215,7 @@
   max-width: 100%;
   border-radius: 15px;
   position: relative;
+  
 }
 
 #hosting-header {
@@ -273,7 +270,7 @@
 
 
 /* smaller desktop */
-@media (min-width: 992px) and (max-width: 1800px) {
+@media (min-width: 992px) and (max-width: 1500px) {
 
   div#nav-container3 > .menu-links-3:nth-of-type(1) {
     margin-left: 60px;
@@ -281,7 +278,8 @@
 
 #gift-card-header1 {
   font-size: 16px;
-  transform: translate(-80%, 80%);
+  transform: translate(0, 80%);
+  bottom: 100%;
 }
 
 #gift-card-header2 {
@@ -319,11 +317,6 @@
     min-width: 400px;
     margin: 1%;
   }
-
-  #hosting-img-container, #hosting-img-inner-container {
-    max-width: 100%;
-    width: fit-content;
-  }  
   
   #hosting-header {
     font-size: 43px;
@@ -339,7 +332,7 @@
 /* mobile styles  */
 @media (max-width: 480px) {
   #content {
-    background-image: linear-gradient(#000000 23.5%, #ffffff 23.5%);
+    background-image: linear-gradient(#000000 23%, #ffffff 23%);
   }
 
   #main-header {
@@ -354,6 +347,11 @@
   #top-container, #top-inner-container {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  #tent-img {
+    object-fit: cover;
+    height: 500px;
   }
 
   #gift-card-inner-container,
