--- a/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
+++ b/applicant_coding_challenge/challenge_1/src/styles/LandingPage.css
@@ -122,6 +122,7 @@
   text-align: left;
   font-size: 42px;
   margin-left: 40px;
+  font-weight: 600;
 }
 
 #next-trip-container {
@@ -151,6 +152,8 @@
 #discover-header {
   font-size: 42px;
   text-align: left;
+  margin-left: 20px;
+  font-weight: 600;
 }
 
 .MuiButton-root.MuiButton-contained.MuiButton-containedPrimary.MuiButton-sizeMedium.MuiButton-containedSizeMedium.MuiButtonBase-root.discover-buttons {
@@ -202,7 +205,7 @@
   max-width: 788px;
   max-height: 788px;
   border-radius: 15px;
-  margin: .5%;
+  margin: .5% .5% 6% .5%;
 }
 
 #hosting-img-container, #hosting-img-inner-container {
@@ -419,7 +422,6 @@
   #discover-header {
     font-size: 25px;
     width: 200px;
-    font-weight: 500;
   }
 
   .discover-buttons.css-sghohy-MuiButtonBase-root-MuiButton-root {
