--- a/applicant_coding_challenge/challenge_1/src/styles/SearchBar.css
+++ b/applicant_coding_challenge/challenge_1/src/styles/SearchBar.css
@@ -79,7 +79,7 @@ label#mui-4-label {
         display: none;
     }
 
-    .MuiContainer-root.MuiContainer-maxWidthLg#search-icon {
+    #search-icon {
         display: flex;
         justify-content: flex-start;
         position:absolute;
